# wordslab-notebooks-lib

./: .gitignore  MANIFEST.in  README.md  agent.html  agent.html.md  chat.html  chat.html.md  context.html  context.html.md  core.html  core.html.md  docs.html  docs.html.md  env.html  env.html.md  index.html  index.html.md  install.json  notebook.html  notebook.html.md  notebook_context.html  notebook_context.html.md  package.json  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  test.txt  tools.html  tools.html.md  tools_study_answerai.html  tools_study_answerai.html.md  tools_study_anthropic.html  tools_study_anthropic.html.md  tools_study_mistral-vibe.html  tsconfig.json
.ipynb_checkpoints/: settings-checkpoint.ini
_proc/: 00_core.ipynb  index.ipynb
nbs/: 00_core.ipynb  01_context.ipynb  01_env.ipynb  01_environment.ipynb  01_notebook_context.ipynb  02_chat.ipynb  02_jupyterlab.ipynb  02_notebook.ipynb  03_chat.ipynb  03_tools.ipynb  03_tools_study_anthropic.ipynb  03_tools_study_mistral-vibe.ipynb  04_docs.ipynb  04_documents.ipynb  04_notebook.ipynb  04_tools.ipynb  05_agent.ipynb  index.ipynb  nbdev.yml  todo.txt
nbs/mistral-vibe-tools/: web_crawl.py  web_extract.py  web_map.py  web_search.py
nbs/tools-studies/: 03_tools_study_answerai.ipynb  03_tools_study_anthropic.ipynb  03_tools_study_mistral-vibe.ipynb
schema/: plugin.json
src/: index.ts
style/: base.css
wordslab_notebooks_lib/: __init__.py  _modidx.py  chat.py  context.py  core.py  docs.py  env.py  environment.py  notebook.py  notebook_context.py  tools.py
wordslab_notebooks_lib/labextension/: package.json
wordslab_notebooks_lib/labextension/schemas/wordslab-notebooks-lib/: package.json.orig  plugin.json
wordslab_notebooks_lib/labextension/static/: 509.075c9ac3990ff6b78cc0.js  509.13831627def4a133761c.js  509.150178b35660dcc02549.js  509.1c6f5cc57d70d3355d6e.js  509.27f0fe396ebd1959f560.js  509.31a8271a12b74361ebf9.js  509.35eecf94b521e0bf07da.js  509.3a710f639ec8cb109465.js  509.56dbad346d3cd4bbc1d4.js  509.7358941a0feadeddf9da.js  509.7eeab77bb72785b40a13.js  509.82389860630a2e3782bb.js  509.8afc10b58777ebcf0409.js  509.a0ad30a3dbdf68068b10.js  509.a6831da45f515a8d8957.js  509.a988563355c2fedba5bc.js  509.aae2dc65c72f999073b7.js  509.bc3fa89e5cebf1d889ff.js  509.c483138856267dcf103d.js  509.c533f1205ec9553f0687.js  509.ca4a88ec77505dd41a01.js  509.db609eadaf8af8187949.js  509.dc8f2aa8db85e628bc4a.js  509.e201d1c5fe6a73931519.js  509.fbb4182dcb30da0dabe4.js  665.475b323fe3e713ad6702.js  665.8b93fe8d79c1bb155edc.js  665.9a3f769d60ee06a0d4e3.js  remoteEntry.1934c8e3a6e7c2f3e09a.js  remoteEntry.22b1c96e6f26d93d5a58.js  remoteEntry.2493f6d89bb6574a7297.js  remoteEntry.2dbd88fd033c3f74f671.js  remoteEntry.365392c7fa44407093d5.js  remoteEntry.4f66689c13629ba3dea0.js  remoteEntry.5986b3324f17758b47f6.js  remoteEntry.7ab6cc61b44826b028ab.js  remoteEntry.882f6c0a381ebb981660.js  remoteEntry.88b90b1769884a3681df.js  remoteEntry.97d57e417eaf8ebadeb6.js  remoteEntry.ab76d9a9b23bdbc264f4.js  (+14 more)
